GNOME Bugzilla – Bug 730361
plparse: Fix potential integer overflow when parsing long durations
Last modified: 2014-05-19 11:28:10 UTC
Patch attached.
Created attachment 276748 [details] [review] plparse: Fix potential integer overflow when parsing long durations If a duration legitimately specifies a huge number of hours, there is the potential for an integer overflow when converting to seconds. Coverity issue: #60480
Review of attachment 276748 [details] [review]: Looks good. Want to look at the same bugs in totem?
Attachment 276748 [details] pushed as 4707e16 - plparse: Fix potential integer overflow when parsing long durations