plparse: Fix potential integer overflow when parsing long durations

If a duration legitimately specifies a huge number of hours, there is
the potential for an integer overflow when converting to seconds.

Coverity issue: #60480

https://bugzilla.gnome.org/show_bug.cgi?id=730361